ACLOCAL_AMFLAGS = -I ../m4

volumedriverdir = @prefix@/lib/python@PYTHON_VERSION@/dist-packages/volumedriver

volumedriver_PYTHON = \
	volumedriver/__init__.py

basedir = @prefix@/lib/python@PYTHON_VERSION@/dist-packages/volumedriver/base

volumedrivertestdir=@prefix@/lib/python@PYTHON_VERSION@/dist-packages/volumedrivertest

volumedrivertest_PYTHON= \
	__init__.py

base_PYTHON = \
	auxiliary.py  \
	env.py \
	__init__.py \
	testutils.py  \
	VolumeDriverUtils.py \
	ScrubDefs.py


SUBDIRS = .
# test
